--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Minimal RxJS wrapper around the window.postMessage interface for both passive (request-response) and active (notification) streams across frame windows.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "build:prod": "webpack -p",
+    "build-w": "webpack --watch",
+    "lint": "tslint \"./src/**/*.ts\""
   },
   "keywords": [
     "RxJS",
@@ -18,6 +21,14 @@
   "author": "Jeffrey Westerkamp",
   "license": "MIT",
   "dependencies": {
-    "rxjs": "^5.5.2"
+    "awesome-typescript-loader": "^3.4.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "rxjs": "^5.5.2",
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.1",
+    "webpack": "^3.8.1"
   }
 }
