--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,19 @@
 {
     "compilerOptions": {
-        "allowJs": true,
         "moduleResolution": "node",
-        "target": "es2015",
-        "module":"es2015",
+        "lib": ["es2015", "dom"],
+        "target": "es5",
+        "module":"commonjs",
         "noImplicitAny": true,
-        "preserveConstEnums": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "declaration": true,
+        "outDir": "lib"
     },
     "include":[
         "src/**/*.ts"
     ],
     "exclude": [
+        "node_modules",
         "dist"
     ]
 }
