--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "npm-major": "npm version major && npm publish --access=public && git push"
   },
   "dependencies": {
+    "rxjs": "^5.5.2"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.2",
     "awesome-typescript-loader": "^3.4.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "rxjs": "^5.5.2",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1",
     "webpack": "^3.8.1"
-  },
-  "devDependencies": {
-    "npm-run-all": "^4.1.2"
   }
 }
