[Feature] Support for injection of external Rx implementation for UMD bundles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
         "target": "es5",
         "module":"commonjs",
         "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "suppressImplicitAnyIndexErrors": true,
         "sourceMap": true,
         "declaration": true,
         "outDir": "lib"
