--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "noImplicitThis": true,
         "suppressImplicitAnyIndexErrors": true,
         "sourceMap": true,
-        "declaration": true,
+        "declaration": false,
         "outDir": "lib"
     },
     "include":[
