[WiP] Event mapping & request interface

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
         "noImplicitThis": true,
         "suppressImplicitAnyIndexErrors": true,
         "sourceMap": true,
+        "strictNullChecks": true,
+        "strictFunctionTypes": true,
         "declaration": false,
         "outDir": "lib"
     },
