--- a/package.json
+++ b/package.json
@@ -30,15 +30,19 @@
     "publish-major": "npm version major && npm publish --access=public && git push"
   },
   "dependencies": {
+    "lodash-es": "^4.17.4",
+    "ramda": "^0.25.0",
     "rxjs": "^5.5.2"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.2",
+    "@types/lodash-es": "^4.17.0",
+    "@types/ramda": "^0.25.9",
     "awesome-typescript-loader": "^3.4.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "npm-run-all": "^4.1.2",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1",
     "webpack": "^3.8.1"
