--- a/package.json
+++ b/package.json
@@ -2,32 +2,26 @@
   "name": "rx-postmessenger",
   "version": "0.1.12",
   "author": "Jeffrey Westerkamp",
-  "description": "Minimal RxJS wrapper around the window.postMessage interface for both passive (request-response) and active (notification) streams across frame windows.",
   "repository": "git+https://github.com/JJWesterkamp/rx-postmessenger.git",
+  "description": "Minimal RxJS wrapper around the window.postMessage API for both passive (request-response) and active (notification) streams across frame windows.",
+  "keywords": ["RxJS", "Browser", "iframe", "postMessage", "event", "request", "response", "mapped", "typescript"],
   "license": "MIT",
   "main": "./lib/index.js",
-  "types": "./lib/index.d.ts",
+  "types": "./rx-postmessenger.d.ts",
   "module": "./esm/index.js",
-  "keywords": [
-    "RxJS",
-    "Browser",
-    "iframe",
-    "postMessage",
-    "event",
-    "request",
-    "response"
-  ],
   "scripts": {
-    "lint": "tslint \"./src/**/*.ts\"",
     "dev": "run-p \"build:** -- --watch\"",
     "build": "run-p build:**",
-    "build:cjs": "tsc --declaration",
+    "build:cjs": "tsc",
     "build:esm": "tsc -m es6 --outDir esm",
     "build:umd": "webpack",
-    "prepublish": "npm run build",
-    "publish-patch": "npm version patch && npm publish --access=public && git push",
-    "publish-minor": "npm version minor && npm publish --access=public && git push",
-    "publish-major": "npm version major && npm publish --access=public && git push"
+    "lint": "run-p lint:**",
+    "lint:source": "tslint -c tslint.json 'src/**/*.ts' --fix",
+    "lint:declaration": "tslint -c tslint.json '*.d.ts' --fix",
+    "publish:pre": "npm-run-all lint build",
+    "publish:patch": "npm run publish:pre && npm version patch && npm publish --access=public && git push",
+    "publish:minor": "npm run publish:pre && npm version minor && npm publish --access=public && git push",
+    "publish:major": "npm run publish:pre && npm version major && npm publish --access=public && git push"
   },
   "dependencies": {
     "lodash-es": "^4.17.4",
