--- a/package.json
+++ b/package.json
@@ -4,7 +4,17 @@
   "author": "Jeffrey Westerkamp",
   "repository": "git+https://github.com/JJWesterkamp/rx-postmessenger.git",
   "description": "Minimal RxJS wrapper around the window.postMessage API for both passive (request-response) and active (notification) streams across frame windows.",
-  "keywords": ["RxJS", "Browser", "iframe", "postMessage", "event", "request", "response", "mapped", "typescript"],
+  "keywords": [
+    "RxJS",
+    "Browser",
+    "iframe",
+    "postMessage",
+    "event",
+    "request",
+    "response",
+    "mapped",
+    "typescript"
+  ],
   "license": "MIT",
   "main": "./lib/index.js",
   "types": "./rx-postmessenger.d.ts",
