[Fix] Testing console output
Progress reporter was truncating the karma-mocha-reporter output

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "postbuild": "npm run copy:interface",
     "prebuild": "npm run clean:dist",
     "prepublish": "npm-run-all lint build",
-    "test:dev": "karma start --single-run karma.conf.js",
-    "test:ci": "karma start --single-run --no-auto-watch karma.conf.js"
+    "test": "karma start karma.conf.js",
+    "test:ci": "karma start --single-run --no-auto-watch --reporters mocha karma.conf.js"
   },
   "dependencies": {
     "@types/chai": "^4.1.7",
