[Feature] Setup test suite + coverage + written some tests

--- a/package.json
+++ b/package.json
@@ -26,13 +26,10 @@
     "build:esm": "tsc -m es6 --outDir esm",
     "build:umd": "webpack",
     "clean:dist": "rm -rf esm cjs umd",
-    "copy:interface": "run-p copy:interface:*",
-    "copy:interface:cjs": "mkdir cjs/interface/ && cp -rf ./src/interface/*.d.ts cjs/interface/",
-    "copy:interface:esm": "mkdir esm/interface/ && cp -rf ./src/interface/*.d.ts esm/interface/",
+    "clean:coverage": "rm -rf coverage",
     "lint": "run-p lint:**",
     "lint:source": "tslint -c tslint.json 'src/**/*.ts' --fix",
     "lint:declaration": "tslint -c tslint.json '*.d.ts' --fix",
-    "postbuild": "npm run copy:interface",
     "prebuild": "npm run clean:dist",
     "prepublish": "npm-run-all lint build",
     "test": "karma start karma.conf.js",
@@ -45,13 +42,17 @@
     "rxjs": "^5.5.2"
   },
   "devDependencies": {
+    "@types/webpack": "^4.4.19",
+    "@types/webpack-env": "^1.13.6",
     "chai": "^4.2.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^3.1.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
+    "karma-remap-coverage": "^0.1.5",
     "karma-sinon": "^1.0.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
