--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
         "keyofStringsOnly": true
     },
     "include":[
-        "src/**/*.ts"
+        "src/**/*.ts",
+        "src/**/*.d.ts"
     ],
     "exclude": [
         "node_modules",
