--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.26.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "window-mock": "^0.0.13"
   }
 }
