[Feature] Run tests before npm publication - ignore coverage for npm

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint:source": "tslint -c tslint.json 'src/**/*.ts' --fix",
     "lint:declaration": "tslint -c tslint.json '*.d.ts' --fix",
     "prebuild": "npm run clean:dist",
-    "prepublish": "npm-run-all lint build",
+    "prepublish": "npm-run-all lint test:ci build",
     "test": "karma start karma.conf.js",
     "test:ci": "karma start --single-run --no-auto-watch karma.conf.js"
   },
