[Massive refactor] Package deps, testsuite, structure
- Replaced Karma test suite with Jest
- Refactored public and private interfaces
- Refactored webpack build process

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "moduleResolution": "node",
         "lib": ["es2015", "dom"],
         "target": "es5",
-        "module":"commonjs",
+        "module": "es2015",
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
@@ -12,12 +12,10 @@
         "strictNullChecks": true,
         "strictFunctionTypes": true,
         "declaration": true,
-        "outDir": "cjs",
-        "keyofStringsOnly": true
+        "outDir": "cjs"
     },
     "include":[
-        "src/**/*.ts",
-        "src/**/*.d.ts"
+        "src/**/*.ts"
     ],
     "exclude": [
         "node_modules",
