--- a/package.json
+++ b/package.json
@@ -43,23 +43,23 @@
     "test": "jest",
     "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
-  "dependencies": {
-    "rxjs": "^6.5.2"
+  "peerDependencies": {
+    "rxjs": "6.x || 7.x"
   },
   "devDependencies": {
     "@jjwesterkamp/typedoc-theme": "^1.2.0",
-    "@types/jest": "^26.0.15",
-    "@types/jsdom": "^16.2.5",
-    "@types/webpack-env": "^1.15.3",
-    "coveralls": "^3.1.0",
-    "jest": "^26.6.3",
-    "jsdom": "^16.4.0",
+    "@types/jest": "^27.0.1",
+    "@types/jsdom": "^16.2.13",
+    "@types/webpack-env": "^1.16.2",
+    "coveralls": "^3.1.1",
+    "jest": "^27.0.6",
+    "jsdom": "^17.0.0",
     "npm-run-all": "^4.1.5",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^9.1.2",
-    "typedoc": "^0.20.34",
-    "typescript": "^4.2",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0"
+    "ts-jest": "^27.0.5",
+    "ts-loader": "^9.2.5",
+    "typedoc": "^0.21.5",
+    "typescript": "^4.3.5",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0"
   }
 }
