--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,12 @@
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
-        "suppressImplicitAnyIndexErrors": true,
         "sourceMap": true,
-        "strictNullChecks": true,
-        "strictFunctionTypes": true,
+        "strict": true,
         "declaration": true,
         "outDir": "cjs"
     },
-    "include":[
+    "include": [
         "src/**/*.ts"
     ],
     "exclude": [
